train and evalute functions

--- a/show, attend and tell/Train.ipynb
+++ b/show, attend and tell/Train.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30000/30000 [00:00<00:00, 324992.88it/s]\n"
+      "100%|██████████| 30000/30000 [00:00<00:00, 348962.15it/s]\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4451"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
     }
    ],
    "source": [
-    "# transforms \n",
+    "# Custom dataloaders\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize(256),\n",
     "    transforms.CenterCrop(224),\n",
@@ -180,318 +180,269 @@
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
     "])\n",
     "\n",
-    "train_loader, valid_loader = get_loaders(batch_size, '../flickr/Images/','../data.json', transform, vocab, workers)"
+    "train_loader, val_loader = get_loaders(batch_size, '../flickr/Images/', '../data.json', transform, vocab, workers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train import train, validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(torch.Size([32, 3, 224, 224]), torch.Size([32, 39]), torch.Size([32]))"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img, caption, cap_len = next(iter(train_loader))\n",
-    "img.shape, caption.shape, cap_len.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2it [00:02,  1.14s/it]"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "(torch.Size([32, 3, 224, 224]), torch.Size([32, 39]), torch.Size([32]))"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img, caption, cap_len, all_tokens = next(iter(valid_loader))\n",
-    "img.shape, caption.shape, cap_len.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][0/938]\tBatch Time 2.660 (2.660)\tData Load Time 2.489 (2.489)\tLoss 6.4553 (6.4553)\tTop-5 Accuracy 26.168 (26.168)\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([32, 14, 14, 512])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "enc_out = encoder(img.to(device))\n",
-    "enc_out.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "102it [00:23,  6.13it/s]"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "DecoderWithAttention(\n",
-       "  (attention): Attention(\n",
-       "    (encoder_att): Linear(in_features=512, out_features=256, bias=True)\n",
-       "    (decoder_att): Linear(in_features=256, out_features=256, bias=True)\n",
-       "    (full_att): Linear(in_features=256, out_features=1, bias=True)\n",
-       "    (relu): ReLU()\n",
-       "    (softmax): Softmax(dim=1)\n",
-       "  )\n",
-       "  (embedding): Embedding(4451, 256)\n",
-       "  (dropout): Dropout(p=0.5, inplace=False)\n",
-       "  (decode_step): LSTMCell(768, 256)\n",
-       "  (init_h): Linear(in_features=512, out_features=256, bias=True)\n",
-       "  (init_c): Linear(in_features=512, out_features=256, bias=True)\n",
-       "  (f_beta): Linear(in_features=256, out_features=512, bias=True)\n",
-       "  (sigmoid): Sigmoid()\n",
-       "  (fc): Linear(in_features=256, out_features=4451, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "decoder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][100/938]\tBatch Time 0.150 (0.233)\tData Load Time 0.002 (0.081)\tLoss 5.9524 (6.0867)\tTop-5 Accuracy 35.644 (33.742)\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([32, 14, 14, 512])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "202it [00:40,  6.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][200/938]\tBatch Time 0.153 (0.204)\tData Load Time 0.001 (0.046)\tLoss 5.4442 (5.9013)\tTop-5 Accuracy 44.816 (36.508)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "302it [01:00,  6.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][300/938]\tBatch Time 0.152 (0.200)\tData Load Time 0.001 (0.039)\tLoss 5.2968 (5.7479)\tTop-5 Accuracy 50.633 (39.434)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "402it [01:16,  6.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][400/938]\tBatch Time 0.154 (0.191)\tData Load Time 0.001 (0.030)\tLoss 5.3618 (5.6247)\tTop-5 Accuracy 45.231 (41.541)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "502it [01:33,  5.64it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][500/938]\tBatch Time 0.223 (0.188)\tData Load Time 0.001 (0.024)\tLoss 5.0540 (5.5220)\tTop-5 Accuracy 51.652 (43.261)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "602it [01:50,  6.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][600/938]\tBatch Time 0.147 (0.183)\tData Load Time 0.001 (0.021)\tLoss 5.0498 (5.4323)\tTop-5 Accuracy 48.936 (44.673)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "701it [02:06,  6.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][700/938]\tBatch Time 0.153 (0.180)\tData Load Time 0.001 (0.018)\tLoss 4.8629 (5.3619)\tTop-5 Accuracy 56.040 (45.785)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "802it [02:22,  6.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][800/938]\tBatch Time 0.163 (0.178)\tData Load Time 0.001 (0.016)\tLoss 4.8263 (5.3007)\tTop-5 Accuracy 53.822 (46.738)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "902it [02:38,  6.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][900/938]\tBatch Time 0.162 (0.176)\tData Load Time 0.001 (0.014)\tLoss 4.5594 (5.2471)\tTop-5 Accuracy 58.632 (47.555)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "938it [02:44,  5.69it/s]\n"
+     ]
     }
    ],
    "source": [
-    "enc_out.shape"
+    "epochs = 1\n",
+    "start_epoch = 0\n",
+    "\n",
+    "\n",
+    "for epoch in range(start_epoch, epochs):\n",
+    "    train(train_loader=train_loader, \n",
+    "          encoder=encoder,\n",
+    "          decoder=decoder,\n",
+    "          criterion=criterion,\n",
+    "          encoder_optimizer=encoder_optimizer,\n",
+    "          decoder_optimizer=decoder_optimizer,\n",
+    "          epoch=epoch\n",
+    "         )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([32, 196, 512])\n",
-      "torch.Size([32, 512])\n"
+      "Validation: [0/157]\tBatch Time 0.875 (0.875)\tLoss 5.5678 (5.5678)\tTop-5 Accuracy 53.430 (53.430)\t\n",
+      "Validation: [100/157]\tBatch Time 0.169 (0.140)\tLoss 5.5231 (5.6358)\tTop-5 Accuracy 50.303 (49.587)\t\n",
+      "\n",
+      " * LOSS - 5.613, TOP-5 ACCURACY - 49.821, BLEU-4 - 0.004498661142443737\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "preds, encoded_caps, decoded_lengths, alphas, sort_id = decoder(enc_out, caption.to(device), cap_len.unsqueeze(1).to(device))"
+    "for epoch in range(start_epoch, epochs):\n",
+    "    recent_bleu4 = validate(val_loader=val_loader,\n",
+    "                                encoder=encoder,\n",
+    "                                decoder=decoder,\n",
+    "                                criterion=criterion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMG_DIR = '../flickr/Images/'\n",
+    "CAP_FILE = '../data.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset split: val\n",
+      "Unique images: 1000\n",
+      "Total size: 5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds = CaptionDataset(IMG_DIR, CAP_FILE, vocab, transform, split='val')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img, _, _, all_toks= ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([32, 16, 4451]), torch.Size([32, 39]), torch.Size([32, 16, 196]))"
+       "torch.Size([5, 38])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preds.shape, encoded_caps.shape, alphas.shape"
+    "all_toks.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1., device='cuda:0', grad_fn=<SumBackward0>)"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alphas[0, 0, :].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train(train_loader, encoder, deocder, criterion, encoder_optimizer, decoder_optimizer, epoch):\n",
-    "    decoder.train()\n",
-    "    encoder.train()\n",
-    "    \n",
-    "    batch_time = AverageMeter()\n",
-    "    data_time = AverageMeter()\n",
-    "    losses = AverageMeter()\n",
-    "    top5acc = AverageMeter()\n",
-    "    \n",
-    "    start = time.time()\n",
-    "    \n",
-    "    for i, (imgs, caps, caplens) in enumerate(train_loader):\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
