--- a/show, attend and tell/Train.ipynb
+++ b/show, attend and tell/Train.ipynb
@@ -38,17 +38,18 @@
     "from models import Encoder, DecoderWithAttention\n",
     "from dataset import *\n",
     "from utils import *\n",
+    "from utils import adjust_learning_rate\n",
     "from nltk.translate.bleu_score import corpus_bleu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
-    "enc_dim = 512\n",
+    "encoder_dim = 512\n",
     "emb_dim = 256  # dimension of word embeddings\n",
     "attention_dim = 256  # dimension of attention linear layers\n",
     "decoder_dim = 256  # dimension of decoder RNN\n",
@@ -56,32 +57,26 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")  # sets device for model and PyTorch tensors\n",
     "cudnn.benchmark = True  # set to true only if inputs to model are fixed size; otherwise lot of computational overhead\n",
     "\n",
-    "# Training parameters\n",
-    "start_epoch = 0\n",
-    "epochs = 120  # number of epochs to train for (if early stopping is not triggered)\n",
-    "epochs_since_improvement = 0  # keeps track of number of epochs since there's been an improvement in validation BLEU\n",
+    "# training parameters\n",
+    "epochs = 1  # number of epochs to train for (if early stopping is not triggered)\n",
     "batch_size = 32\n",
     "workers = 4\n",
     "encoder_lr = 1e-4  # learning rate for encoder if fine-tuning\n",
     "decoder_lr = 4e-4  # learning rate for decoder\n",
-    "grad_clip = 5.  # clip gradients at an absolute value of\n",
-    "alpha_c = 1.  # regularization parameter for 'doubly stochastic attention', as in the paper\n",
-    "best_bleu4 = 0.  # BLEU-4 score right now\n",
-    "print_freq = 100  # print training/validation stats every __ batches\n",
     "fine_tune_encoder = False  # fine-tune encoder?\n",
     "checkpoint = None  # path to checkpoint, None if none"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30000/30000 [00:00<00:00, 348962.15it/s]\n"
+      "100%|██████████| 30000/30000 [00:00<00:00, 358207.89it/s]\n"
      ]
     }
    ],
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +96,7 @@
        "4451"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,358 +107,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "decoder = DecoderWithAttention(attention_dim=attention_dim,\n",
-    "                                       embed_dim=emb_dim,\n",
-    "                                       decoder_dim=decoder_dim,\n",
-    "                                       vocab_size=len(vocab),\n",
-    "                                       encoder_dim=enc_dim,\n",
-    "                                       dropout=dropout)\n",
-    "\n",
-    "decoder_optimizer = torch.optim.Adam(params=filter(lambda p: p.requires_grad, decoder.parameters()),\n",
-    "                                             lr=decoder_lr)\n",
-    "\n",
-    "encoder = Encoder()\n",
-    "encoder.fine_tune(fine_tune_encoder)\n",
-    "encoder_optimizer = torch.optim.Adam(params=filter(lambda p: p.requires_grad, encoder.parameters()),\n",
-    "                                     lr=encoder_lr) if fine_tune_encoder else None"
+    "from train import fit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# move to GPU, if available\n",
-    "decoder = decoder.to(device)\n",
-    "encoder = encoder.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loss function\n",
-    "criterion = nn.CrossEntropyLoss().to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading Data\n",
       "Dataset split: train\n",
       "Unique images: 6000\n",
       "Total size: 30000\n",
       "Dataset split: val\n",
       "Unique images: 1000\n",
-      "Total size: 5000\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Custom dataloaders\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
-    "    transforms.CenterCrop(224),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
-    "\n",
-    "train_loader, val_loader = get_loaders(batch_size, '../flickr/Images/', '../data.json', transform, vocab, workers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from train import train, validate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2it [00:02,  1.14s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][0/938]\tBatch Time 2.660 (2.660)\tData Load Time 2.489 (2.489)\tLoss 6.4553 (6.4553)\tTop-5 Accuracy 26.168 (26.168)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "102it [00:23,  6.13it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][100/938]\tBatch Time 0.150 (0.233)\tData Load Time 0.002 (0.081)\tLoss 5.9524 (6.0867)\tTop-5 Accuracy 35.644 (33.742)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "202it [00:40,  6.08it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][200/938]\tBatch Time 0.153 (0.204)\tData Load Time 0.001 (0.046)\tLoss 5.4442 (5.9013)\tTop-5 Accuracy 44.816 (36.508)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "302it [01:00,  6.06it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][300/938]\tBatch Time 0.152 (0.200)\tData Load Time 0.001 (0.039)\tLoss 5.2968 (5.7479)\tTop-5 Accuracy 50.633 (39.434)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "402it [01:16,  6.35it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][400/938]\tBatch Time 0.154 (0.191)\tData Load Time 0.001 (0.030)\tLoss 5.3618 (5.6247)\tTop-5 Accuracy 45.231 (41.541)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "502it [01:33,  5.64it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][500/938]\tBatch Time 0.223 (0.188)\tData Load Time 0.001 (0.024)\tLoss 5.0540 (5.5220)\tTop-5 Accuracy 51.652 (43.261)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "602it [01:50,  6.32it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][600/938]\tBatch Time 0.147 (0.183)\tData Load Time 0.001 (0.021)\tLoss 5.0498 (5.4323)\tTop-5 Accuracy 48.936 (44.673)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "701it [02:06,  6.25it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][700/938]\tBatch Time 0.153 (0.180)\tData Load Time 0.001 (0.018)\tLoss 4.8629 (5.3619)\tTop-5 Accuracy 56.040 (45.785)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "802it [02:22,  6.30it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][800/938]\tBatch Time 0.163 (0.178)\tData Load Time 0.001 (0.016)\tLoss 4.8263 (5.3007)\tTop-5 Accuracy 53.822 (46.738)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "902it [02:38,  6.13it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][900/938]\tBatch Time 0.162 (0.176)\tData Load Time 0.001 (0.014)\tLoss 4.5594 (5.2471)\tTop-5 Accuracy 58.632 (47.555)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "938it [02:44,  5.69it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "epochs = 1\n",
-    "start_epoch = 0\n",
-    "\n",
-    "\n",
-    "for epoch in range(start_epoch, epochs):\n",
-    "    train(train_loader=train_loader, \n",
-    "          encoder=encoder,\n",
-    "          decoder=decoder,\n",
-    "          criterion=criterion,\n",
-    "          encoder_optimizer=encoder_optimizer,\n",
-    "          decoder_optimizer=decoder_optimizer,\n",
-    "          epoch=epoch\n",
-    "         )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation: [0/157]\tBatch Time 0.875 (0.875)\tLoss 5.5678 (5.5678)\tTop-5 Accuracy 53.430 (53.430)\t\n",
-      "Validation: [100/157]\tBatch Time 0.169 (0.140)\tLoss 5.5231 (5.6358)\tTop-5 Accuracy 50.303 (49.587)\t\n",
+      "Total size: 5000\n",
+      "__________________________________________________\n",
+      "-------------------- Fitting --------------------\n",
+      "Epoch: [0][0/938]\tBatch Time 0.792 (0.792)\tData Load Time 0.593 (0.593)\tLoss 9.3271 (9.3271)\tTop-5 Accuracy 0.687 (0.687)\n",
+      "Epoch: [0][100/938]\tBatch Time 0.174 (0.182)\tData Load Time 0.000 (0.006)\tLoss 6.1308 (6.7088)\tTop-5 Accuracy 34.824 (29.400)\n",
+      "Epoch: [0][200/938]\tBatch Time 0.157 (0.177)\tData Load Time 0.000 (0.003)\tLoss 5.6063 (6.3051)\tTop-5 Accuracy 41.554 (32.847)\n",
+      "Epoch: [0][300/938]\tBatch Time 0.182 (0.176)\tData Load Time 0.000 (0.002)\tLoss 5.6357 (6.0563)\tTop-5 Accuracy 43.003 (36.081)\n",
+      "Epoch: [0][400/938]\tBatch Time 0.172 (0.174)\tData Load Time 0.000 (0.002)\tLoss 5.3434 (5.8833)\tTop-5 Accuracy 46.724 (38.698)\n",
+      "Epoch: [0][500/938]\tBatch Time 0.168 (0.174)\tData Load Time 0.000 (0.001)\tLoss 4.9073 (5.7391)\tTop-5 Accuracy 52.786 (40.882)\n",
+      "Epoch: [0][600/938]\tBatch Time 0.146 (0.174)\tData Load Time 0.000 (0.001)\tLoss 5.2694 (5.6286)\tTop-5 Accuracy 48.684 (42.516)\n",
+      "Epoch: [0][700/938]\tBatch Time 0.171 (0.174)\tData Load Time 0.000 (0.001)\tLoss 4.9673 (5.5354)\tTop-5 Accuracy 50.156 (43.833)\n",
+      "Epoch: [0][800/938]\tBatch Time 0.190 (0.174)\tData Load Time 0.000 (0.001)\tLoss 4.7173 (5.4577)\tTop-5 Accuracy 55.455 (44.997)\n",
+      "Epoch: [0][900/938]\tBatch Time 0.185 (0.175)\tData Load Time 0.000 (0.001)\tLoss 4.8929 (5.3824)\tTop-5 Accuracy 52.038 (46.098)\n",
+      "Validation: [0/157]\tBatch Time 0.684 (0.684)\tLoss 5.7259 (5.7259)\tTop-5 Accuracy 47.561 (47.561)\t\n",
+      "Validation: [100/157]\tBatch Time 0.139 (0.155)\tLoss 5.8433 (5.7146)\tTop-5 Accuracy 46.302 (49.155)\t\n",
       "\n",
-      " * LOSS - 5.613, TOP-5 ACCURACY - 49.821, BLEU-4 - 0.004498661142443737\n",
+      " * LOSS - 5.671, TOP-5 ACCURACY - 49.569, BLEU-4 - 0.004648268726912672\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for epoch in range(start_epoch, epochs):\n",
-    "    recent_bleu4 = validate(val_loader=val_loader,\n",
-    "                                encoder=encoder,\n",
-    "                                decoder=decoder,\n",
-    "                                criterion=criterion)"
+    "t_params = {\n",
+    "    'data_name': 'flickr8k_5_cap_per_img_2_min_word_freq',\n",
+    "    'imgs_path': '../flickr/Images/',\n",
+    "    'df_path': '../data.json',\n",
+    "    'vocab': vocab,\n",
+    "    'epochs': epochs,\n",
+    "    'batch_size': batch_size,\n",
+    "    'workers': workers,\n",
+    "    'decoder_lr': decoder_lr,\n",
+    "    'encoder_lr': encoder_lr,\n",
+    "    'fine_tune_encoder': fine_tune_encoder\n",
+    "}\n",
+    "\n",
+    "m_params = {\n",
+    "    'attention_dim': attention_dim,\n",
+    "    'embed_dim': emb_dim,\n",
+    "    'decoder_dim': decoder_dim,\n",
+    "    'encoder_dim': encoder_dim,\n",
+    "    'dropout': dropout\n",
+    "}\n",
+    "\n",
+    "\n",
+    "fit(t_params=t_params, m_params=m_params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "IMG_DIR = '../flickr/Images/'\n",
-    "CAP_FILE = '../data.json'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset split: val\n",
-      "Unique images: 1000\n",
-      "Total size: 5000\n"
-     ]
-    }
-   ],
-   "source": [
-    "ds = CaptionDataset(IMG_DIR, CAP_FILE, vocab, transform, split='val')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img, _, _, all_toks= ds[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([5, 38])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_toks.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
